--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.pack.CalculatorApplication</start-class>
+		<start-class>com.education.calculator.CalculatorApplication</start-class>
 		<java.version>1.8</java.version>
 	</properties>
 
